--- a/zero-start/package.json
+++ b/zero-start/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^1.2.2",
     "element-plus": "^2.2.28",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
