--- a/zero-start/package.json
+++ b/zero-start/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.2.2",
     "element-plus": "^2.2.28",
+    "element-ui": "^2.15.12",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
